2013-05-27  Alan Mackenzie  <acm@muc.de>

	Remove spurious syntax-table text properties inserted by C-y.
	* progmodes/cc-mode.el (c-after-change): Also clear hard
	syntax-table property with value nil.

2013-05-27  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el (dbus-call-method): Let-bind `inhibit-redisplay'
	when reading the events; the buffer layout shall not be changed.

2013-05-27  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (inferior-octave-directory-tracker-resync):
	New variable.
	(inferior-octave-directory-tracker): Automatically re-sync
	default-directory.
	(octave-help): Improve handling of 'See also'.

2013-05-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* doc-view.el: Minor naming convention tweaks.
	(desktop-buffer-mode-handlers): Don't add to it repeatedly.

	* image-mode.el (image-mode-reapply-winprops): Call image-mode-winprops
	even if there's no `display' property yet (bug#14435).

2013-05-25  Eli Zaretskii  <eliz@gnu.org>

	* subr.el (unmsys--file-name): Rename from reveal-filename.

	* Makefile.in (custom-deps, finder-data, autoloads)
	($(MH_E_DIR)/mh-loaddefs.el, $(TRAMP_DIR)/tramp-loaddefs.el)
	($(CAL_DIR)/cal-loaddefs.el, $(CAL_DIR)/diary-loaddefs.el)
	($(CAL_DIR)/hol-loaddefs.el): All users changed.

2013-05-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/lisp.el (lisp-completion-at-point): Don't use
	error-completion on the first 2 args of condition-case (bug#14446).
	Don't burp at EOB.

2013-05-25  Leo Liu  <sdl.web@gmail.com>

	* comint.el (comint-previous-matching-input): Do not flood the
	*Messages* buffer with trivial messages.

2013-05-25  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/flymake.el (flymake-nop): Don't return a string.
	(flymake-set-at): Fix typo.

	* simple.el (read--expression): New function, extracted from
	eval-expression.  Set completion-at-point-functions (bug#14465).
	(eval-expression, eval-minibuffer): Use it.

2013-05-25  Xue Fuqiao  <xfq.free@gmail.com>
